# dj-book-rental

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
core/: asgi.py  settings.py  urls.py  wsgi.py
core/forms/: auth.py
core/settings/: base.py  dev.py  prod.py
core/views/: auth.py
nginx/: default.conf
rentals/: forms.py  models.py  urls.py  utils.py  views.py
rentals/migrations/: 0001_initial.py  0002_student_alter_rental_user.py  0003_rename_user_rental_student.py  0004_rental_cost.py  0005_book_isbn.py  0006_rename_isbn_book_cover_i.py  0007_alter_rental_end_date.py
scripts/: run.sh
templates/: books.html  dashboard.html  find_student.html  index.html  rentage_cost.html  rentals.html  search.html  students.html
templates/auth/: signin.html  signup.html
templates/includes/: headers.html
templates/structures/: dashboard.html
