[tool.poetry]
name = "dj-book-rental"
version = "0.1.0"
description = ""
authors = ["spaceofmiah"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
django-htmx = "^1.17.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
django-storages = "^1.14.2"
boto3 = "^1.34.64"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
